--- a/conf/config/autoencoderh5.yaml
+++ b/conf/config/autoencoderh5.yaml
@@ -22,11 +22,17 @@ XRAY1_MIN_MAX: [0, 255]
 XRAY2_MIN_MAX: [0, 255]
 CT_MIN_MAX: [0, 2500]
 fine_size: 128
+fine_size_cond: 256
 ct_channel: 128
 xray_channel: 1
  
 train_datasetfile: "./data/train.txt"
 val_datasetfile: "/disk/cdy/Xray-Diffusion/data/test.txt"
+cond_nums: [1,2]   #[1,2,3]
+
+cond1_order: [0,1,2,3,4]
+cond2_order: [0,1,4,3,2]
+cond3_order: [0,1,4,2,3]
 
   
 model:
