--- a/conf/config/clipae.yaml
+++ b/conf/config/clipae.yaml
@@ -36,6 +36,8 @@ cond3_order: [0,1,4,2,3]
 
 condloss_ratio: 100000.0  # aeloss的数量级是1e5
 
+cond_type: 'add' # 'add' or 'cat'
+
 cond_model_config:
   patch_size: 16
   embed_dim: 256
@@ -78,7 +80,7 @@ trainer:
   benchmark: True
   # accumulate_grad_batches: 2
   # devices: [1]
-  devices: [0]
+  devices: [1]
   accelerator: "auto"
   max_epochs: 1000
   fast_dev_run: False
