--- a/conf/config/clipae.yaml
+++ b/conf/config/clipae.yaml
@@ -85,8 +85,9 @@ trainer:
   benchmark: True
   # accumulate_grad_batches: 2
   # devices: [1]
-  devices: [0,1]
+  devices: [0]
   accelerator: "auto"
   max_epochs: 1000
   fast_dev_run: False
-  strategy: "ddp_find_unused_parameters_true"
+  # strategy: "ddp_find_unused_parameters_true"
+  precision: "16-mixed"
