--- a/conf/config/ssldm.yaml
+++ b/conf/config/ssldm.yaml
@@ -5,8 +5,8 @@ image_size: 128 # resize input images to this size
 resize_size: [128,128,128]
 # img_resize_size: [256,256] 
 img_resize_size: [128,128] # ? X光的resize size改回128，这样才合理
-data_path: "/disk/cdy/LIDC-HDF5-256"   #feijiejie
-dataroot: "/disk/cdy/LIDC-HDF5-256"   #feijiejie
+data_path: "/home/cdy/LIDC-HDF5-256"   #feijiejie
+dataroot: "/home/cdy/LIDC-HDF5-256"   #feijiejie
 CT_MEAN_STD: [0., 1.]
 XRAY1_MEAN_STD: [0., 1.]
 XRAY2_MEAN_STD: [0., 1.0]
@@ -20,7 +20,7 @@ ct_channel: 128
 xray_channel: 1
  
 train_datasetfile: "./data/train.txt"
-val_datasetfile: "/disk/cdy/Xray-Diffusion/data/test.txt"
+val_datasetfile: "./data/test.txt"
   
 # cond_path: "/disk/ssy/data/drr/result/split2/feijiejieDR"
 
@@ -32,13 +32,13 @@ output_dir : "./logs/${config.name}"  # the traning logs saved
 latent_diffusion:
   # ckpt: True
   # ckpt_path: "/disk/cc/Xray-Diffsuion/logs/ldm/pl_train_ldm-2024-11-08/21-50-19/pl_train_autoencoder-epoch870-val_rec_loss0.00.ckpt"
-  base_learning_rate: 5.0e-5
+  base_learning_rate: 3e-5
   linear_start: 0.0015
   linear_end: 0.0155
   num_timesteps_cond: 1
   high_low_mode: False
   cond_nums: [1,2]   #[1,2,3]
-  batch_size: 1
+  batch_size: ${config.batch_size}
 
 
   log_every_t: 200
@@ -122,13 +122,14 @@ latent_diffusion:
     in_channels: 20 # ? cond1 + cond2 = 16, z = 4
     out_channels: 4
     model_channels: 192
-    attention_resolutions: [1,2,4,8]
+    attention_resolutions: []
     num_res_blocks: 2
     channel_mult: [1,2,3,4]
     num_heads: 8
     use_spatial_transformer: False
     use_scale_shift_norm: True
     resblock_updown: True
+    use_fp16: True
 
     # context_dim: 4
     transformer_depth: 1
@@ -136,11 +137,14 @@ latent_diffusion:
     legacy: False
 
   scheduler_config:
-    warm_up_steps: [100000]
-    cycle_lengths: [10000000000000]
-    f_start: [1.e-6]
+    warm_up_steps: [1000]
+    cycle_lengths: [1830000]
+    f_start: [1.e-2]
     f_max: [1.]
-    f_min: [1.]
+    f_min: [1.e-4]
+    verbosity_interval: 100
+    # step_size: 20
+    # gamma: 0.8
 
 
 trainer:
@@ -151,7 +155,7 @@ trainer:
   # devices: [1]
   accelerator: "auto"
   max_epochs: 1000
-  # precision: "bf16-mixed"
+  precision: "bf16-mixed"
   # strategy: "ddp_find_unused_parameters_true"
   # fast_dev_run: true
 
