--- a/conf/config/clipae.yaml
+++ b/conf/config/clipae.yaml
@@ -5,8 +5,8 @@ image_size: 128 # resize input images to this size
 resize_size: [128,128,128]
 # cond_path: "/nvme/Pancreas-Dataset/pancreas_diff/cond_data/"
 # data_path: "/disk/ssy/data/drr/zhougu/zhougunii"   #zhougu
-data_path: "/disk/cdy/LIDC-HDF5-256"   #feijiejie
-dataroot: "/disk/cdy/LIDC-HDF5-256"   #feijiejie
+data_path: "/home/cdy/LIDC-HDF5-256"   #feijiejie
+dataroot: "/home/cdy/LIDC-HDF5-256"   #feijiejie
 # data_path: "/disk/ssy/data/drr/pengu/all/"   #pengu
 # data_path: "/disk/ssy/data/drr/yixianyan/yixianyan_nii/"   #yixianyan
 
@@ -34,9 +34,11 @@ cond1_order: [0,1,2,3,4]
 cond2_order: [0,1,4,3,2]
 cond3_order: [0,1,4,2,3]
 
-condloss_ratio: 100000.0  # aeloss的数量级是1e5
+# condloss_ratio: 100000.0  # aeloss的数量级是1e5
 
-loss_ratio: 1.0
+cond_loss_ratio: 1.e4
+nll_loss_ratio: 1.0
+kl_loss_ratio: 1.e-2
 
 # cond_type: 'add' # 'add' or 'cat'
 cond_type: 'add' # 'add' or 'cat'
@@ -85,9 +87,9 @@ trainer:
   benchmark: True
   # accumulate_grad_batches: 2
   # devices: [1]
-  devices: [1]
+  devices: [0]
   accelerator: "auto"
   max_epochs: 1000
   fast_dev_run: False
   # strategy: "ddp_find_unused_parameters_true"
-  precision: "bf16-mixed"
+  precision: "32"
