--- a/conf/config/clipae.yaml
+++ b/conf/config/clipae.yaml
@@ -1,12 +1,13 @@
 name: 'clipae'
+tag: 'clipae with contrastive learning & auto-regression'
 #****** Data settings ******
 image_size: 128 # resize input images to this size
 # pad_channel: 16
 resize_size: [128,128,128]
 # cond_path: "/nvme/Pancreas-Dataset/pancreas_diff/cond_data/"
 # data_path: "/disk/ssy/data/drr/zhougu/zhougunii"   #zhougu
-data_path: "/home/cdy/LIDC-HDF5-256"   #feijiejie
-dataroot: "/home/cdy/LIDC-HDF5-256"   #feijiejie
+data_path: "/home/cdy/X2CTData/LIDC-HDF5-256"   #feijiejie
+dataroot: "/home/cdy/X2CTData/LIDC-HDF5-256"   #feijiejie
 # data_path: "/disk/ssy/data/drr/pengu/all/"   #pengu
 # data_path: "/disk/ssy/data/drr/yixianyan/yixianyan_nii/"   #yixianyan
 
@@ -26,8 +27,8 @@ ct_channel: 128
 xray_channel: 1
  
 train_datasetfile: "./data/train.txt"
-val_datasetfile: "/disk/cdy/Xray-Diffusion/data/test.txt"
-cond_nums: [1,2]   #[1,2,3]
+val_datasetfile: "./data/test.txt"
+cond_nums: [1, 2]   #[1,2,3]
 cond_size: 256 # resize condition images to this size
 
 cond1_order: [0,1,2,3,4]
@@ -49,10 +50,10 @@ cond_model_config:
   num_heads: 8
   depth: 16
 
-ae_ckpt: "/disk/cdy/SharedSpaceLDM/ckpt/autoencoder-feijiejie-ckpt/pl_train_autoencoder-epoch130-val_rec_loss0.00.ckpt"
+ae_ckpt: "/home/cdy/SharedSpaceLDM/ckpt/autoencoder-1248-feijiejie/pl_train_autoencoder-epoch690-val_rec_loss0.00.ckpt"
 
 model:
-  base_learning_rate: 0.0001  #zhougu 0.00001 others: 0.0001
+  base_learning_rate: 3e-5  #zhougu 0.00001 others: 0.0001
   sync_dist: True
   # params:
   monitor: "val/cliploss"
@@ -77,7 +78,7 @@ model:
     out_ch: 1
     ch: 32 # !
     # ch: 16
-    ch_mult: [1,2,4,4]  # num_down = len(ch_mult)-1  #[1,2,2,2,4]  [1,2,4,4] # !
+    ch_mult: [1,2,4,8]  # num_down = len(ch_mult)-1  #[1,2,2,2,4]  [1,2,4,4] # !
     # ch_mult: [1,1,2,4]  # num_down = len(ch_mult)-1  #[1,2,2,2,4]  [1,2,4,4]
     num_res_blocks: 2
     attn_resolutions: []
@@ -85,11 +86,12 @@ model:
 
 trainer:
   benchmark: True
-  # accumulate_grad_batches: 2
+  # accumulate_grad_batches: 4
   # devices: [1]
-  devices: [0]
+  check_val_every_n_epoch: 10
+  devices: [1]
   accelerator: "auto"
   max_epochs: 1000
   fast_dev_run: False
-  # strategy: "ddp_find_unused_parameters_true"
-  precision: "32"
+  strategy: "ddp_find_unused_parameters_true"
+  precision: "bf16-mixed"
